# telco-core

./: .gitignore  README.md  meson.build  meson_options.txt  telco-core.vcxproj  telco-core.vcxproj.filters  telco-gadget.vcxproj  telco-portal.vcxproj  telco-server.vcxproj
inject/: inject-glue.c  inject-glue.h  inject.vala  meson.build  post-process.sh  telco-inject.xcent
lib/agent/: agent-glue.c  agent.vala  meson.build  telco-agent-32.vcxproj  telco-agent-64.vcxproj  telco-agent-common.props  telco-agent-x86.symbols  telco-agent.def  telco-agent.symbols  telco-agent.version
lib/base/: buffer.vala  dbus.vala  meson.build  p2p-glue.c  p2p.vala  promise.vala  rpc.vala  session-glue.c  session.vala  socket-glue.c  socket.vala  telco-base-32.vcxproj  telco-base-32.vcxproj.filters  telco-base-64.vcxproj  telco-base-64.vcxproj.filters  telco-base-common.props  telco-tvos.h
lib/gadget/: gadget-darwin.m  gadget-glue.c  gadget.vala  meson.build  telco-gadget.def
lib/pipe/: meson.build  pipe-darwin.c  pipe-glue.h  pipe-sddl.c  pipe-sddl.h  pipe-unix.c  pipe-windows.c  pipe.vala  telco-pipe-32.vcxproj  telco-pipe-32.vcxproj.filters  telco-pipe-64.vcxproj  telco-pipe-64.vcxproj.filters  telco-pipe-common.props
lib/selinux/: meson.build  patch.c  telco-selinux.h
portal/: meson.build  portal.vala  post-process.sh
server/: meson.build  post-process.sh  server-darwin.h  server-darwin.m  server-glue.c  server-glue.h  server-ios-tvos.c  server-ios-tvos.h  server.vala  telco-server.plist  telco-server.xcent
src/: agent-container.vala  agent.resources  async-task.vala  control-service.vala  embed-agent.sh  embed-helper.sh  file-monitor.vala  gdb.vala  helper.resources  host-session-service.vala  meson.build  portal-service.vala  post-process-helper.sh  system.vala  telco-glue.c  telco.vala
src/api/: generate.py  merge.sh  meson.build
src/barebone/: allocator.vala  barebone-host-session.vala  barebone.resources  callback.vala  interceptor.vala  machine.vala  memory-scanner.vala  meson.build  package-lock.json  package.json  rust-module.vala  script.vala
src/barebone/arch-arm/: machine.vala
src/barebone/arch-arm64/: machine.vala
src/barebone/arch-unknown/: machine.vala
src/barebone/arch-x86/: machine.vala
src/barebone/arch-x86_64/: machine.vala
src/barebone/script-runtime/: message-dispatcher.ts
src/compiler/: agent-core.ts  agent-entrypoint.js  agent-warmup.js  compiler.resources  compiler.vala  generate-agent.py  meson.build  package-lock.json  package.json  rollup.config.agent-core.ts  rollup.config.typescript.ts
src/darwin/: darwin-host-session-glue.m  darwin-host-session.vala  fruitjector.vala  icon-helpers.h  icon-helpers.m  policy-softener-glue.c  policy-softener.vala  policyd-client.c  policyd-client.h  policyd-server.c  policyd-server.h  policyd.c  policyd.defs  policyd.h  springboard.h  springboard.m  substituted-client.h  substituted2-client.h  system-darwin.m  telco-darwin.resources  telco-helper-backend-glue.m  telco-helper-backend.vala  telco-helper-null-backend.vala  telco-helper-process.vala  telco-helper-service-glue.h  telco-helper-service-glue.m  telco-helper-service.vala  telco-helper-types.vala  telco-helper.plist  telco-helper.xcent
src/darwin/agent/: launchd.js  osanalytics.js  reportcrash.js
src/droidy/: axml.vala  droidy-client.vala  droidy-host-session.vala  injector.vala  jdwp.vala
src/droidy/helper/: Makefile
src/droidy/helper/re/telco/: Helper.java
src/freebsd/: binjector-glue.c  binjector.vala  freebsd-host-session.vala  system-freebsd.c
src/fruity/: dtx.vala  fruity-host-session-darwin.m  fruity-host-session-unix.c  fruity-host-session-windows.c  fruity-host-session.vala  injector.vala  installation-proxy.vala  keyed-archive.vala  lldb.vala  lockdown.vala  plist-service.vala  plist.vala  springboard-services.vala  usbmux.vala
src/fruity/helpers/: symbol-fetcher.c  symbol-resolver.c  upload-api.h  upload-listener.c  upload-receiver.c
src/linux/: linjector-glue.c  linjector.vala  linux-host-session.vala  supersu.vala  system-linux.c  telco-android.resources  telco-helper-backend-glue.c  telco-helper-backend-types.c  telco-helper-backend.resources  telco-helper-backend.vala  telco-helper-process.vala  telco-helper-service.vala  telco-helper-types.vala  telco-sysapi.vapi  telco-syscall.h
src/linux/helpers/: Makefile  bootstrapper.c  elf-parser.c  elf-parser.h  inject-context.h  loader.c  meson.build  syscall.c  syscall.h
src/qnx/: qinjector-glue.c  qinjector.vala  qnx-host-session.vala  system-qnx.c
src/socket/: socket-host-session.vala
src/windows/: access-helpers.c  access-helpers.h  icon-helpers.c  icon-helpers.h  system-windows.c  telco-helper-32.vcxproj  telco-helper-32.vcxproj.filters  telco-helper-64.vcxproj  telco-helper-64.vcxproj.filters  telco-helper-backend-32.vcxproj  telco-helper-backend-32.vcxproj.filters  telco-helper-backend-64.vcxproj  telco-helper-backend-64.vcxproj.filters  telco-helper-backend-common.props  telco-helper-backend-glue.c  telco-helper-backend.vala  telco-helper-common.props  telco-helper-process-glue.c  telco-helper-process-glue.h  telco-helper-process.vala  telco-helper-service-glue.c  telco-helper-service-glue.h  telco-helper-service.vala  telco-helper-types.vala  wait-handle-source.c  windows-host-session-glue.c  windows-host-session.vala  winjector-glue.c  winjector.vala
tests/: async-harness.vala  labrats.vala  main.vala  meson.build  process-resource-usage.c  process-unix.c  process-windows.c  process.vala  profile-compiler.sh  run-android-arm.sh  run-android-arm64.sh  run-android-x86.sh  run-android-x86_64.sh  run-ios.sh  run-linux-vm.sh  run-linux-x86_64.sh  run-macos.sh  runner-glue.c  runner.vala  sign.sh  telco-tests.plist  telco-tests.vcxproj  telco-tests.xcent  test-agent-glue.c  test-agent.vala  test-compiler.vala  test-gadget.vala  test-host-session.vala  test-injector.vala  test-system.vala  vm.py
tools/: meson.build  package-server-fruity.sh  post-process-module.sh  resource-compiler.vala  symbolicate.py  telco-resource-compiler.vcxproj
vapi/: config.vapi
(+36 files in other folders)
